2006-11-26  Don Allingham  <don@gramps-project.org>
	* po/gramps.pot: updated

2006-11-26  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (load): Clean env for a new grdb
	file; do not attempt recovery for a new grdb file.
	* NEWS: Typo.

2006-11-26  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditPlace.py: consistent menu and title names
	* src/Editors/_EditSource.py: consistent menu and title names
	* src/Editors/_EditPerson.py: consistent menu and title names
	* src/Editors/_EditMedia.py: consistent menu and title names
	* src/Editors/_EditRepository.py: consistent menu and title names
	* src/Editors/_EditFamily.py: consistent menu and title names
	* src/Editors/_EditEvent.py: consistent menu and title names
	* src/docgen/ODFDoc.py: fix registration

2006-11-25  Don Allingham  <don@gramps-project.org>
	* src/Config/_GrampsConfigKeys.py: remember window size
	* src/Editors/_EditAddress.py: remember window size
	* src/Editors/_EditSecondary.py: remember window size
	* src/Editors/_EditLdsOrd.py: remember window size
	* src/Editors/_EditReference.py: remember window size
	* src/Editors/_EditUrl.py: remember window size
	* src/Editors/_EditRepoRef.py: remember window size
	* src/Editors/_EditAttribute.py: remember window size
	* src/Editors/_EditPersonRef.py: remember window size
	* src/Editors/_EditLocation.py: remember window size
	* src/Editors/_EditMediaRef.py: remember window size
	* src/Editors/_EditEventRef.py: remember window size
	* src/Editors/_EditName.py: remember window size
	* src/glade/gramps.glade: remember window size
	* data/gramps.schemas.in: remember window size

2006-11-25  Alex Roitman  <shura@gramps-project.org>
	* NEWS: Update.
	* src/GrampsLogger/_ErrorReportAssistant.py
	(_get_sys_information): Report BSDDB version.
	* src/GrampsDb/_GrampsBSDDB.py (GrampsBSDDB.load): Use
	per-database environment dirs, under ~/.gramps/env dir.
	* src/const.py.in (env_dir): Add new variable.
